k8s/main/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sdomain
spec:
  selector:
    app: sdomain
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
