k8s/main/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sdomain
spec:
  rules:
  - host: sdomain.38.cc.ucll.cloud  # Update with your desired domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sdomain
            port:
              number: 80
